--- a/deployment-worker.yaml
+++ b/deployment-worker.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: organization-worker
+  name: organization-worker-nonsql
 spec:
   replicas: 2
   revisionHistoryLimit: 2
   selector:
     matchLabels:
-      app: organization-worker
+      app: organization-worker-nonsql
   template:
     metadata:
       labels:
-        app: organization-worker
+        app: organization-worker-nonsql
     spec:
       containers:
       - image: 751111534101.dkr.ecr.us-west-2.amazonaws.com/dotnetdynamodbwithsqs-worker:latest-fed89671e3d878688c232f735272cdd20568abe1
-        name: organization-worker
+        name: organization-worker-nonsql
         env:
           - name: Application__ConnectionString
             valueFrom:
