--- a/service-api.yaml
+++ b/service-api.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1	
 kind: Service	
 metadata:	
-  name: organization-api
+  name: organization-api-nonsql
 spec:
   selector:
-    app: organization-api
+    app: organization-api-nonsql
   type: LoadBalancer
   ports:	
   - protocol: TCP
