--- a/service-worker.yaml
+++ b/service-worker.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: organization-worker
+  name: organization-worker-nonsql
 spec:
   selector:
-    app: organization-worker
+    app: organization-worker-nonsql
   type: NodePort
   ports:
   - protocol: TCP
