--- a/service-api.yaml
+++ b/service-api.yaml
@@ -7,6 +7,5 @@ spec:
     app: organization-api-nonsql
   type: LoadBalancer
   ports:
-  - protocol: TCP
-    port: 80
+  - port: 80
     targetPort: 80
