--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,16 +29,14 @@ jobs:
     - name: Build, tag, and push docker image to Amazon ECR
       env:
         REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        REPOSITORY_API: dotnetdynamodbwithsqs-api
-        REPOSITORY_Worker: dotnetdynamodbwithsqs-worker
-        IMAGE_TAG: 1.8
-      run: |    
-        ls
-        docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/dotnetdynamodbwithsqs-api:latest-${{ github.sha }} -f Dockerfile_Api .
-        docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/dotnetdynamodbwithsqs-worker:latest-${{ github.sha }} -f Dockerfile_Worker .        
 
-        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/dotnetdynamodbwithsqs-api:latest-${{ github.sha }}
-        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/dotnetdynamodbwithsqs-worker:latest-${{ github.sha }}               
+      run: |
+        ls
+        docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/dotnetnosql-api:latest-${{ github.sha }} -f Dockerfile_Api .
+        docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/dotnetnosql-worker:latest-${{ github.sha }} -f Dockerfile_Worker .
+
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/dotnetnosql-api:latest-${{ github.sha }}
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/dotnetnosql-worker:latest-${{ github.sha }}
         
     - name: Extract Docker image tag
       id: extract-tag
@@ -46,21 +44,21 @@ jobs:
     - name: Update deployment.yaml
       run: |        
         ls        
-        sed  -i '/dotnetdynamodbwithsqs-api/ s/:latest-.*$/:latest-${{ steps.extract-tag.outputs.tag }}/' deployment-api.yaml
-        sed  -i '/dotnetdynamodbwithsqs-worker/ s/:latest-.*$/:latest-${{ steps.extract-tag.outputs.tag }}/' deployment-worker.yaml
+        sed  -i '/dotnetnosql-api/ s/:latest-.*$/:latest-${{ steps.extract-tag.outputs.tag }}/' deployment-api.yaml
+        sed  -i '/dotnetnosql-worker/ s/:latest-.*$/:latest-${{ steps.extract-tag.outputs.tag }}/' deployment-worker.yaml
         echo "reading file"
         cat deployment-api.yaml
-        git config --global user.email "dev@demo.com"
-        git config --global user.name "demodev"
+        git config --global user.email "dev@hackathon.com"
+        git config --global user.name "testdev"
         git status
         git add . 
         git commit -m "Update to new version"
         git push
     - name: Update kube config
-      run: aws eks update-kubeconfig --name demo-eks
+      run: aws eks update-kubeconfig --name hackathon-eks
     - name: Deploy to EKS
       run: |
-        kubectl apply -f deployment-api.yaml -n test1
-        kubectl apply -f service-api.yaml -n test1
-        kubectl apply -f deployment-worker.yaml -n test1
-        kubectl apply -f service-worker.yaml -n test1
+        kubectl apply -f deployment-api.yaml -n dotnetnosql-ns
+        kubectl apply -f service-api.yaml -n dotnetnosql-ns
+        kubectl apply -f deployment-worker.yaml -n dotnetnosql-ns
+        kubectl apply -f service-worker.yaml -n dotnetnosql-ns
