--- a/service-api.yaml
+++ b/service-api.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: organization-api-nonsql
+  name: organization-api-nosql
 spec:
   selector:
-    app: organization-api-nonsql
+    app: organization-api-nosql
   type: LoadBalancer
   ports:
   - port: 80
