--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
     - name: Update deployment.yaml
       run: |        
         ls        
+        cd Manifests
         sed  -i '/dotnetnosql-api/ s/:latest-.*$/:latest-${{ steps.extract-tag.outputs.tag }}/' deployment-api.yaml
         sed  -i '/dotnetnosql-worker/ s/:latest-.*$/:latest-${{ steps.extract-tag.outputs.tag }}/' deployment-worker.yaml
         echo "reading file"
@@ -58,6 +59,7 @@ jobs:
       run: aws eks update-kubeconfig --name hackathon-eks
     - name: Deploy to EKS
       run: |
+        cd Manifests
         kubectl apply -f deployment-api.yaml -n dotnetnosql-ns
         kubectl apply -f service-api.yaml -n dotnetnosql-ns
         kubectl apply -f deployment-worker.yaml -n dotnetnosql-ns
